# Stemhub

./: .env.example  .env.local  .gitignore  .gitmodules  README.md  docker-compose.yml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: bug_plugin.yml  features  features.yml
.github/workflows/: docker-build.yml  plugin-build.yml  pr-discord-alert.yml  push-to-mirror.yml  sync-pyflp-submodule.yml
Plugin/stemhub/: CMakeLists.txt  stemhub.jucer
Plugin/stemhub/Builds/LinuxMakefile/: Makefile
Plugin/stemhub/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Plugin/stemhub/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
backend/: .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 136d2794af3b_add_genres_to_user.py  13d775b94a79_explore_page_models.py  253ab8a9a44f_add_branch_table.py  2b7c42ab9a50_add_created_by_to_version_and_.py  386961d0f2b6_add_bio_to_users.py  4503f6717f87_add_collaborator_table.py  4aad2f560761_add_soft_delete_columns.py  58dbef40b2ff_update_models.py  7ccbce320c45_create_users_and_project_tables.py  a1b2c3d4e5f6_add_is_admin_to_user.py  b41d10f293fb_auto_migration.py  b71f10e958d7_add_attribute_is_admin_in_table_users.py  b9f8e7d6c5a4_merge_admin_and_main_head.py  c8b5d9c7e4aa_add_missing_user_profile_columns.py  cb5f23d4c1b9_align_version_snapshot_metadata.py  ced97673c3f5_add_version_table.py  d1e2f3a4b5c6_merge_heads.py  d4f1a6d2a9c0_merge_heads_after_user_profile_fix.py  e70ee25e901a_add_nullable_created_at_to_track.py  f9161916fc34_add_track_table.py  fe0485288783_describe_your_change.py
backend/scripts/: bootstrap-backend.sh
backend/src/stemhub/: __init__.py  auth.py  database.py  dependency_guard.py  flp_mixer_snapshot.py  main.py  migrations.py  models.py  schemas.py  security.py  storage.py
backend/src/stemhub/routers/: admin.py  branches.py  collaborators.py  community.py  explore.py  files.py  project_summary.py  projects.py  stats.py  tracks.py  versions.py
backend/tests/: test_files_api.py  test_flp_mixer_snapshot.py  test_migrations.py  test_mixer_diff.py  test_project_name_uniqueness.py  test_pyflp_availability.py  test_storage.py  test_version_diff_history_api.py  test_version_snapshot_metadata.py  test_versions_compare_api.py
docs/: BACKLOG.md  COMPARATIVE_BENCHMARK.md  COMPLIANCE_LEGAL_AUDIT.md  COST_AND_REVENUE.md  DATA_API_MODELING.md  DEPLOYMENT_RESILIENCE.md  DESIGN_SYSTEM.md  ENVIRONMENTAL_IMPACT.md  PERSONAS_USE_CASES.md  RISK_MANAGEMENT.md  TEAM_SKILLS_RESSOURCES_AUDIT.md  TECHNICAL_CONTEXT.md  TROUBLESHOOT_AUTH_DB.md  plugin-data-flow.md  research.md
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/admin/users/: page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/components/: CtaBanner.tsx  CustomCursor.tsx  DiffSection.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Logos.tsx  Navbar.tsx  Pricing.tsx  SmoothScroll.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/explore/: page.tsx
frontend/app/dashboard/profile/: page.tsx
frontend/app/dashboard/projects/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/changes/: page.tsx
frontend/app/projects/components/: AudioUploadButton.tsx  ContributionActivity.tsx  ProjectSettings.tsx  QuickExport.tsx  RecentChanges.tsx  RepositoryAudioPlayer.tsx  RepositoryBranchBar.tsx  RepositoryFileList.tsx  RepositoryHeader.tsx  RepositoryPageHeader.tsx  RepositorySidebar.tsx  TopContributors.tsx
frontend/app/register/: page.tsx
frontend/app/repository/: page.tsx
frontend/app/repository/commits/: page.tsx
frontend/app/repository/components/: ContributionActivity.tsx  QuickExport.tsx  RecentChanges.tsx  RepositoryAudioPlayer.tsx  RepositoryBranchBar.tsx  RepositoryFileList.tsx  RepositoryHeader.tsx  RepositoryPageHeader.tsx  TopContributors.tsx
frontend/components/: AdminGuard.tsx  Sidebar.tsx  TopNav.tsx
frontend/lib/: api.ts
frontend/types/: next-themes.d.ts  project.ts
plugin/stemhub/: CMakeLists.txt  build-vst3.sh  stemhub.jucer
plugin/stemhub/Source/: PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor.hpp  States.hpp  User.hpp
plugin/stemhub/Source/include/: ApiClient.hpp  ApiUtils.hpp  PluginEditor.hpp  PluginProcessor.hpp  Project.hpp  SnapshotBundler.hpp  States.hpp  VersionControlService.hpp  VersionControlUtils.hpp  Views.hpp
plugin/stemhub/Source/include/application/: BackgroundJobCoordinator.hpp  PluginProcessor.hpp  PluginProcessorHelpers.hpp  ProjectFileService.hpp  SessionCache.hpp  SnapshotBundler.hpp  VersionControlService.hpp
plugin/stemhub/Source/include/domain/: Branch.hpp
plugin/stemhub/Source/include/network/: ApiClient.hpp  ApiUtils.hpp
plugin/stemhub/Source/include/ui/: PluginEditor.hpp  Views.hpp
plugin/stemhub/Source/src/: ApiClient.cpp  DashboardView.cpp  LoginView.cpp  PluginEditor.cpp  PluginProcessor.cpp  SnapshotBundler.cpp  VersionControlService.cpp
plugin/stemhub/Source/src/application/: PluginProcessor.cpp  PluginProcessorStateMachine.cpp  ProcAudio.cpp  ProcAuth.cpp  ProcProjJobs.cpp  ProcProject.cpp  ProcVerJobs.cpp  ProjectFileService.cpp  SessionCache.cpp  SnapshotBundler.cpp
plugin/stemhub/Source/src/network/: ApiClient.cpp  VersionControlService.cpp
plugin/stemhub/Source/src/ui/: DashboardView.cpp  LoginView.cpp  PluginEditor.cpp
plugin_poc/: CMakeLists.txt  README.md
